# tutuca-moonbit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.mbt.md  justfile  moon.mod  moon.pkg  obj_test.mbt  package-lock.json  package.json  path_app_test.mbt  path_changes.mbt  path_changes_test.mbt  path_dispatch.mbt  path_dispatch_test.mbt  path_path.mbt  path_path_test.mbt  path_qc_test.mbt  pkg.generated.mbti  reexport.mbt  spec.mbt  value_debug.mbt  value_eval_test.mbt  value_parse_test.mbt  value_tokenize.mbt  value_tokenize_test.mbt
anode/: anode.mbt  anode_macro_test.mbt  anode_namespace_test.mbt  anode_optimize_test.mbt  anode_parse_test.mbt  anode_xops_test.mbt  attrs.mbt  attrs_test.mbt  build.mbt  build_test.mbt  classes.mbt  classes_test.mbt  events.mbt  html_adapter.mbt  html_adapter_test.mbt  ir.mbt  macros.mbt  moon.pkg  optimize.mbt  parse.mbt  parse_context.mbt  pkg.generated.mbti  qc_test.mbt  spec.mbt  view.mbt  whitespace.mbt  xops.mbt
app/: app.mbt  app_test.mbt  drag.mbt  drag_test.mbt  loop.mbt  loop_test.mbt  moon.pkg  pkg.generated.mbti  teleport_test.mbt
cli/: agent_context.mbt  agent_context_test.mbt  dispatch.mbt  dispatch_test.mbt  errors.mbt  feedback.mbt  feedback_test.mbt  gen_views.mbt  gen_views_corpus_test.mbt  gen_views_ir_test.mbt  gen_views_test.mbt  globals.mbt  globals_test.mbt  help.mbt  help_overview.mbt  install_skill.mbt  install_skill_test.mbt  lint_component.mbt  lint_messages.mbt  lint_rules.mbt  lint_styles.mbt  moon.pkg  (+12 more)
guests/rust-counter/: Cargo.toml  build.mjs
guests/rust-counter/src/: lib.rs
(+490 files in other folders)
